--- a/init.smdk4210.rc
+++ b/init.smdk4210.rc
@@ -4,15 +4,13 @@ import init.gps.rc
 on init
     export EXTERNAL_STORAGE /storage/sdcard0
     export SECONDARY_STORAGE /storage/sdcard1
-
+    mkdir /storage 0775 system system
+    mkdir /storage/sdcard0 0700 root root
+    mkdir /storage/sdcard1 0700 root root
+    mkdir /storage/usbdisk0 0700 root root
     mkdir /mnt/media_rw/sdcard0 0700 media_rw media_rw
     mkdir /mnt/media_rw/sdcard1 0700 media_rw media_rw
     mkdir /mnt/media_rw/usbdisk0 0700 media_rw media_rw
-
-    mkdir /storage/sdcard0 0770 root root
-    mkdir /storage/sdcard1 0770 root root
-    mkdir /storage/usbdisk0 0770 root root
-
     mkdir /efs 0771 radio system
     mkdir /preload 0771 system system
     mkdir /mnt 0775 root system
@@ -41,7 +39,9 @@ on fs
 
     mkdir /data/misc/vpn/profiles 0770 system system
     mkdir /data/misc/radio 0775 radio system
-    chmod 0770 /data/misc/wifi 
+    chmod 0770 /data/misc/wifi
+
+    setprop ro.crypto.fuse_sdcard true
 
 # Restorecon
     restorecon /efs/nv_data.bin
@@ -348,29 +348,34 @@ service mdnsd /system/bin/mdnsd
     oneshot
 
 service p2p_supplicant /system/bin/wpa_supplicant \
-        -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N \
+        -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
+	-I/system/etc/wifi/wpa_supplicant.conf \
+	-O/data/misc/wifi/sockets -N \
         -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf -e/data/misc/wifi/entropy.bin \
+	-I/system/etc/wifi/wpa_supplicant.conf \
         -puse_p2p_group_interface=1 \
-        -O/data/misc/wifi/sockets -g@android:wpa_wlan0
+	-g@android:wpa_wlan0
     #   we will start as root and wpa_supplicant will switch to user wifi
     #   after setting up the capabilities required for WEXT
     #   user wifi
     #   group wifi inet keystore
     class main
-    socket wpa_wlan0 dgram 660 wifi wifi
+    socket wpa_wlan0 dgram 660 wifi wifi u:object_r:wpa_socket:s0
     disabled
     oneshot
 
 service wpa_supplicant /system/bin/wpa_supplicant \
         -Dnl80211 -iwlan0 -e/data/misc/wifi/entropy.bin \
         -c/data/misc/wifi/wpa_supplicant.conf \
-        -O/data/misc/wifi/sockets -g@android:wpa_wlan0
+	-I/system/etc/wifi/wpa_supplicant.conf \
+	-O/data/misc/wifi/sockets \
+	-g@android:wpa_wlan0
     #   we will start as root and wpa_supplicant will switch to user wifi
     #   after setting up the capabilities required for WEXT
     #   user wifi
     #   group wifi inet keystore
     class main
-    socket wpa_wlan0 dgram 660 wifi wifi
+    socket wpa_wlan0 dgram 660 wifi wifi u:object_r:wpa_socket:s0
     disabled
     oneshot
 
@@ -400,9 +405,9 @@ service iprenew_p2p /system/bin/dhcpcd -n
     oneshot
 
 service iprenew_bnep0 /system/bin/dhcpcd -n
-    class main
-    disabled
-    oneshot
+	class main
+	disabled
+	oneshot
 
 # bluetooth mac address
 service bdaddr /system/bin/bdaddr_read
@@ -418,6 +423,7 @@ service bugreport /system/bin/bugmailer.sh -v
     oneshot
     keycodes 114 115 116
 
+# FUSE sdcard daemon for rich permissions (runs as media_rw)
 service fuse_sdcard0 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard0 /storage/sdcard0
     class late_start
     disabled
